Created Main Page and some Login Backend

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/DevelopmentKing102/RPGOnline#readme",
   "dependencies": {
     "bufferutil": "^4.0.1",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "net": "^1.0.2",
     "utf-8-validate": "^5.0.2",
